# Odin

./: README.md  add.py  find.py  init.py  move.py  odin.sh  pyproject.toml  remove.py  requirements.txt
src/odin/: cli.py  config.py  mdb.py
src/odin/utils/: metadata_tools.py
utils/: exif_tools.py  geolocation_tools.py  metadata_tools.py  mongo_tools.py
