[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "odin"
version = "0.0.1"
authors = [
    { name = "Guilleber", email = "guillaume.le_berre@depinfonancy.net" },
]
description = "A simple command line indexing tools intended for photography"
readme = "README.md"
requires-python = ">=3.6"


[project.scripts]
odin = "odin.cli:main"
