[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "odin"
version = "0.0.1"
authors = [
    { name = "Guilleber", email = "guillaume.le_berre@depinfonancy.net" },
]
description = "A simple command line indexing tools intended for photography"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "exif>=1.6.0",
    "JSON-Datetime>=0.0.6",
    "pymongo>=4.3.3",
    "python-dateutil>=2.8.2",
    "tqdm>=4.64.1",
]


[project.scripts]
odin = "odin.cli:main"
